--- a/index.html
+++ b/index.html
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-<h1> <a href="recipes.html">  recipes </a></h1>
-<h1> <a href="travel.html">  travel </a></h1>
-
-</body>
-</html>*/
-
-
-
-<!DOCTYPE html>
 <html>
 <head>
-    <link rel='stylesheet' type='text/css' href='css/styles.css'>
+    <link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 
 <body>
 
-<h1>Proficient in:</h1>
+<h1>Learning:</h1>
 <div class='skillset'>
     <div class='skill-html'>
         <h1>HTML &amp; CSS</h1>
@@ -31,30 +15,15 @@
         <ul class='projects'>
             <li href="recipes.html">Recipes</li>
             <li href="travel.html">Travel</li>
+            <li href="recipes.html">Mouse follower</li>
+            <li href="travel.html">Tic tac toe</li>
         </ul>
         </p>
     </div>
 
-    <div class='skill-js'>
-        <h1>JavaScript</h1>
-        <p class='description'>
-        <div class='projects-button'>Recent Projects</div>
-        <ul class='projects'>
-            <li>Password Validator</li>
-            <li>Whale Talk</li>
-        </ul>
-        </p>
-    </div>
 
-    <div class='skill-jquery'>
-        <h1>jQuery</h1>
-        <p class='description'>
-        <div class='projects-button'>Recent Projects</div>
-        <ul class='projects'>
-            <li>Coming soon...</li>
-        </ul>
-        </p>
-    </div>
+
+
 </div>
 <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
 <script src='js/main.js'></script>
