--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 
 <body>
 
-<h1>Learning:</h1>
+<h1>Welcome to my website! Please look at my projects:</h1>
 <div class='skillset'>
     <div class='skill-html'>
         <h1>HTML &amp; CSS</h1>
         <p class='description'>
         <div class='projects-button'>Recent Projects</div>
         <ul class='projects'>
-            <li href="recipes.html">Recipes</li>
-            <li href="travel.html">Travel</li>
-            <li href="recipes.html">Mouse follower</li>
-            <li href="travel.html">Tic tac toe</li>
+            <li> <a href="recipes.html">Recipes</li>
+            <li> <a href="travel.html">Travel</li>
+            <li> <a href="new.html">Mouse follower</li>
+            <li> <a href="turtle.html">Turtle</li>
+            <li> <a href="magic.html">Magic 8 ball</li>
         </ul>
         </p>
     </div>
