--- a/recipes.html
+++ b/recipes.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
+
+
+<html>
+<head>
+    <link rel='stylesheet' type='text/css' href='style.css'>
+</head>
+
+<body>
+
+
+<div class='skillset'>
+    <div class='skill-html'>
+        <h1>HTML &amp; CSS</h1>
+        <p class='description'>
+        <div class='projects-button'>Recent Projects</div>
+        <ul class='projects'>
+            <li> <a href="recipes.html">Recipes</li>
+            <li> <a href="travel.html">Travel</li>
+            <li> <a href="new.html">Mouse follower</li>
+            <li> <a href="turtle.html">Turtle</li>
+            <li> <a href="magic.html">Magic 8 ball</li>
+        </ul>
+        </p>
+
+
 <html>
 <head>
     <title>Project: Recipe book</title>
